--- a/style.css
+++ b/style.css
@@ -73,9 +73,7 @@ nav li {
   background-color: #f9faf8;
   border: 1px solid #3882f6;
   transition: 0.4s;
-
 }
-
 
 .hero-main-content2 {
   margin-top: 120px;
@@ -85,4 +83,25 @@ nav li {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.fourbox-content {
+  height: 45vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  text-align: center;
+}
+
+.fourbox-content-box {
+  border: 3px solid #3882f6;
+  border-radius: 8px;
+  width: 170px;
+  height: 170px;
+}
+
+.fourbox-content-box span {
+  position: relative;
+  top: 177px;
 }
