--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav li {
 
 .quote-content {
   height: 45vh;
-  background-color: #c6cad4;
+  background-color: #c6cad49c;
   color: #1f2937;
   font-size: 36px;
   font-weight: 300;
@@ -127,4 +127,40 @@ nav li {
   letter-spacing: -2px;
   float: right;
   margin-right: 15px;
+}
+
+.signup-content {
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.signup-content-box {
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-size: 18px;
+  font-weight: 300;
+  border-radius: 8px;
+  height: 50%;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20%;
+}
+
+.signup-content-box span {
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.signup-content-box button {
+  height: 40px;
+  width: 150px;
+  background-color: #3882f6;
+  border: 2px solid #f9faf8;
+  border-radius: 8px;
+  font-size: 24px;
+  color: #f9faf8;
 }
